[package]
name = "guid_proc"
version = "0.1.0"
authors = ["sanfusu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
guid = { git = "https://github.com/sanfusu/guid" }
